--- a/views/adminPage.pug
+++ b/views/adminPage.pug
@@ -7,7 +7,7 @@ html
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css')
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js')
     script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/stylesheets/style_admin.css')
   body
     
     div(class='container-fluid')
@@ -20,13 +20,17 @@ html
               li 
                 a(class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href='/admin_mod/catalog/tracks' role="tab" aria-controls="main") Треклист
               li 
-                a(class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href='/catalog/janrs' role="tab" aria-controls="main") Жанры 
+                a(class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href='/admin_mod/catalog/janrs' role="tab" aria-controls="main") Жанры  
         div(class='col-md-8')
-              block content 
-              block Profile 
+              block janrs
+              block janrs_add
+              block detal_info_janr_admin
+              block delete_janr_by_id
+              block update_janr_by_id
               block MusickList
-        div(class='col-lg-2')
-            ul(class='sidebar-nav')
-              a(href='/main/myprofile') Мой профиль 
+              block tracks_add
+              block detal_info_track_admin
+              block delete_track_by_id
+              block update_track_by_id
   //script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"") 
     
