--- a/views/adminPage.pug
+++ b/views/adminPage.pug
@@ -27,10 +27,13 @@ html
               block detal_info_janr_admin
               block delete_janr_by_id
               block update_janr_by_id
+              block Note_list
+              block track_add 
+              block track_detail
               block MusickList
-              block tracks_add
               block detal_info_track_admin
               block delete_track_by_id
-              block update_track_by_id
-  //script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"") 
-    
+              block update_track_by_id 
+
+
+    //- script(src="/scripts/script.js") 
