--- a/views/janrs.pug
+++ b/views/janrs.pug
@@ -14,7 +14,7 @@ block janrs
         div(class='textArray')
             ul 
                 each janr_value in janrs_list
-                    table 
+                    table(id="tableJanrsAdminPannel")
                         tr 
                             td(class='td_1Kol') 
                                 a(href="/admin_mod/catalog"+janr_value.aboutJanr) #{janr_value.janrName} 
