edit gitIgnor new module for authorization

--- a/views/adminPage.pug
+++ b/views/adminPage.pug
@@ -21,7 +21,7 @@ html
                 a(class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href='/admin_mod/catalog/tracks' role="tab" aria-controls="main") Треклист
               li 
                 a(class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href='/admin_mod/catalog/janrs' role="tab" aria-controls="main") Жанры  
-        div(class='col-md-8')
+        div(class='col-lg-8')
               block janrs
               block janrs_add
               block detal_info_janr_admin
