--- a/views/layout.pug
+++ b/views/layout.pug
@@ -25,6 +25,7 @@ html
               block content 
               block Profile 
               block MusickList
+              block errorToken 
         div(class='col-lg-2')
             ul(class='sidebar-nav')
               a(href='/main/myprofile') Мой профиль 
