AUTH full success

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -26,6 +26,7 @@ html
               block Profile 
               block MusickList
               block errorToken 
+              block tempPageLoad
         div(class='col-lg-2')
             ul(class='sidebar-nav')
               a(href='/main/myprofile') Мой профиль 
