--- a/views/detal_info_janr_admin.pug
+++ b/views/detal_info_janr_admin.pug
@@ -16,7 +16,7 @@ block detal_info_janr_admin
             a(href="/admin_mod/catalog"+janr.aboutJanr+"/update") Изменить этот жанр. 
 
     div(class='footer')
-        block delete_janr_by_id
+        //block delete_janr_by_id
         hr
         br
         label()
