--- a/views/layout.pug
+++ b/views/layout.pug
@@ -16,7 +16,7 @@ html
           block sidebar 
             ul(class='sidebar-nav list-group' id="list-tab" role="tablist")
               li
-                a(class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href='/main/Home' role="tab" aria-controls="main") Главная 
+                a(class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href='/Home' role="tab" aria-controls="main") Главная 
               li 
                 a(class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href='/admin_mod/catalog/tracks' role="tab" aria-controls="main") Треклист
               li 
@@ -29,4 +29,4 @@ html
               block tempPageLoad
         div(class='col-lg-2')
             ul(class='sidebar-nav')
-              a(href='/main/myprofile') Мой профиль 
+              a(href='/myprofile') Мой профиль 
