--- a/views/profileHalf.pug
+++ b/views/profileHalf.pug
@@ -3,7 +3,7 @@ extends layout
 block Profile
 
     div.text-center
-        h1 Мой профиль
-        div.p
-            span(class='border border-success text-left')
-                p Тест текста в строке" 
+        h1=title 
+            div(class='myInfo')
+                h5 Информация о пользователе
+                
