--- a/public/stylesheets/style_admin.css
+++ b/public/stylesheets/style_admin.css
@@ -38,3 +38,11 @@ th, td {
 .td_1Kol {
     width: 50%;
 }
+
+#table-directory {
+    margin: 5px auto;
+    width: 70%;
+    border-collapse: collapse;
+    border: 1px solid black;
+    border-radius: 10px;
+}
