--- a/views/registration.pug
+++ b/views/registration.pug
@@ -12,7 +12,7 @@ html
       div(class='page-header')
         h1(class='registration') Регистрация 
       div
-        p=message
+        p=messageData
 
     form(action="", method="POST")
         div.form-group 
