--- a/views/authorization.pug
+++ b/views/authorization.pug
@@ -24,6 +24,8 @@ html
             input#pass.form-control(type='text', placeholder='12345Pass' name='pass' value=(undefined===pass ? '' : user.pass), required='true')
 
             button.btn.btn-primary(type='submit') Войти
+        .IN 
+          a(href="/auth/signup") Зарегистриоваться 
 
         if errors 
             ul 
