--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,10 +1,10 @@
 body {
-  padding: 50px;
+  padding: 5px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
-  color: #00B7FF;
+  color: #05374b;
 }
 
 .sidebar-nav {
@@ -82,4 +82,84 @@ p{
   display: inline-block;
   place-items:inherit;
   width:100%;
+}
+
+.dark-theme {
+  background-color: #000000;
+  color: #FFFFFF;
+}
+
+.normal-theme {
+  background-color: #B8FFF7;
+  color: #C53131;
+}
+
+.light-theme {
+  background-color: #FFFFFF;
+  color: #000000;
+}
+
+.song_item {
+  display: flex;
+  position: relative;
+  padding: 1px;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.button_play {
+  position: absolute;
+  z-index: 1;
+  display: block;
+  width: 24px!important;
+  height: 24px!important;
+}
+
+.button_play_image{
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  border-radius: 5px;
+}
+
+.botton_song {
+  display: flex;
+  position: relative;
+  min-width: 30px;
+  flex-basis: 30px;
+  height: 30px;
+}
+
+.song_content {
+  padding-left: 10px;
+  justify-content: center;
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+}
+
+.progress_container_player {
+  background: #E4E9ED;
+  border-radius: 5px;
+  width: 100%;
+  height: 10px;
+  margin-top: 10px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.progress_player {
+  background: #2B3C5B;
+  border-radius: 5px;
+  height: 6px;
+  width: 150px;
+}
+
+.button_play {
+  background-image: url(/img/play.png);
+}
+
+.playing_track {
+  background-image: url(/img/pause.png);
 }
