--- a/views/Note_List.pug
+++ b/views/Note_List.pug
@@ -4,28 +4,39 @@ block Note_list
     
     div(class='text-center')
         h1=tite 
-
-    h1 Здесь отображаются все треки
+    | Здесь отображаются все треки
 
     div(class='btn')
-        h4 Хочешь добавить трек? Добавь!
         form(method='GET' action='/admin_mod/catalog/tracks/addNew')
             button.btn.btn-primary(type='submit') Добавить
 
-    div(class='textArray')
- 
-        if(note.length!=0)
-            
-            each val in note
-                table(id="tableTracks") 
-                    tr(id="tableTracks_tr")
-                        td(id="tableTracks_td_1")
-                            a(href=val.url) #{val.name} 
-                        td(id="tableTracks_td_2")
-                            <audio src=#{val.rout} controls></audio> 
-        else 
-            p Треки не найдены!
-            //- ul 
-            //-     for error in errors 
-            //-         li!= error.msg
-
+    div(class='normal-theme')
+                div(class="playlist")
+                    if(note.length!=0)
+                        each val in note
+                            div(class="song_item" data_song_id=(val._id))
+                                div(class="botton_song" data_song_id=(val._id))
+                                    div(class="button_play" data_song_id=(val._id) src="/img/play.png" href=(val.rout) val=(val.name))
+                                div(class="song_content" data_song_id=(val._id))
+                                    a(class="song_name" href=(val.url)) #{val.name}
+                        else 
+                            p Треки не найдены!
+    div(class="row fixed-bottom")
+        div(class="col-lg-2")
+            br
+        div(class="col-lg-8 footer_palyer_wrapper justify-content-center text-center shadow")
+            div(class="player")
+                div(class="name_song") 
+                | 
+                <audio class="audio_player" src=''></audio>
+                div(class="progress_container_player")
+                    div(class="progress_player")
+                div(class="buttons_player")
+                    div(class="btn prev_player")
+                        img(src="/img/prev.png", alt="previos")
+                    div(class="btn")
+                        img(class="play_player" src="/img/play.png", alt="play")
+                    div(class="btn next_player")
+                        img(src="/img/next.png", alt="next")
+        div(class="col-lg-2")
+    script(defer type="module" src="/scripts/main_playlist.js")
