--- a/views/adminPage.pug
+++ b/views/adminPage.pug
@@ -4,15 +4,13 @@ html
     title= title
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1')
-    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css')
-    script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js')
-    script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
-    link(rel='stylesheet', href='/stylesheets/style_admin.css')
+    link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous")
+    link(rel='stylesheet', href='/stylesheets/style.css')
   body
     
-    div(class='container-fluid')
-      div(class='row justify-content-md-center')
-        div(class='col col-lg-2')
+    div(class='container')
+      div(class="row")
+        div(class='col-lg-2')
           block sidebar 
             ul(class='sidebar-nav list-group' id="list-tab" role="tablist")
               li
@@ -24,7 +22,7 @@ html
         div(class='col-lg-8')
               .text-center 
                 h1 Список разделов
-                  .table-directory 
+                  div.table-directory 
                     ul 
                       table(id="table-directory")
                         tr 
@@ -50,6 +48,10 @@ html
               block update_track_by_id 
               block roles 
               block rolesAdd
-
+        div(class='col-lg-2')
+            ul(class='sidebar-nav')
+              a(href='/myprofile') Мой профиль 
 
     //- script(src="/scripts/script.js") 
+    script(src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous")
+    script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous")
