--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,9 +10,8 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     
-    div(class='container-fluid')
-      div(class='row justify-content-md-center')
-        div(class='col col-lg-2')
+    div(class='raw')
+        div(class='col-sm-2')
           block sidebar 
             ul(class='sidebar-nav list-group' id="list-tab" role="tablist")
               li
@@ -21,13 +20,13 @@ html
                 a(class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href='/admin_mod/catalog/tracks' role="tab" aria-controls="main") Треклист
               li 
                 a(class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href='/catalog/janrs' role="tab" aria-controls="main") Жанры 
-        div(class='col-md-8 container-fluid')
+        div(class='col-sm-8')
               block content 
               block Profile 
               block UpdateProfile
               block MusickList
               block errorToken 
               block tempPageLoad
-        div(class='col-lg-2')
+        div(class='col-sm-2')
             ul(class='sidebar-nav')
               a(href='/myprofile') Мой профиль 
