--- a/views/Note_List.pug
+++ b/views/Note_List.pug
@@ -38,5 +38,9 @@ block Note_list
                         img(class="play_player" src="/img/play.png", alt="play")
                     div(class="btn next_player")
                         img(class="next_player_img" src="/img/next.png", alt="next")
+                    div(class="btn volume_player")
+                        img(class="volume_player_img" src="/img/volume.png", alt="volume")
+                    div(class="btn change_size__volume hideClass")
+                        div(class="size_volume")
         div(class="col-lg-2")
     script(defer type="module" src="/scripts/main_playlist.js")
