--- a/views/adminPage.pug
+++ b/views/adminPage.pug
@@ -51,6 +51,7 @@ html
         div(class='col-lg-2')
             ul(class='sidebar-nav')
               a(href='/myprofile') Мой профиль 
+              a(href='/myPlaylists') Мои плeйлисты
 
     //- script(src="/scripts/script.js") 
     script(src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous")
