--- a/views/pageRolesInfo.pug
+++ b/views/pageRolesInfo.pug
@@ -29,7 +29,7 @@ block pageRolesInfo
                         div(class="addNewRiggt")
                             button(type="submit" class="btn btn-success sendCreateQuery" id="sendCreateQuery") Добавить
                         div(class="deleteRole")
-                            button(type="submit" class="btn btn-warning btnForDelete" id=dataRoles.dataRolesById._id) Удалить право из системы
+                            button(type="submit" class="btn btn-warning btnForDelete" id=dataRoles.dataRolesById._id) Удалить роль из системы
                         div(class="back")
                             button(type="submit" class="btn btn-secondary" onClick=`location.href="http://localhost:3000/v1/api/adminCatalog/roles"`) Назад
                         
