--- a/views/adminPage.pug
+++ b/views/adminPage.pug
@@ -7,9 +7,41 @@ html
     link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous")
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
-    block pageRights 
-    block pageRoles  
-    block pageRolesInfo
+    nav(class="navbar navbar-expand bg-body-tertiary")
+      div(class="container-fluid justify-content-center")
+        div(class="collapse navbar-collapse" id="navbarSupportedContent")
+          ul(class="navbar-nav me-auto mb-2 ")
+            li(class="nav-item")
+              a(class="nav-link active" aria-current="page" href="/v1/api/main") Главная
+            li(class="nav-item")
+              a(class="nav-link" aria-current="page" href="/v1/api/myProfile") Мой профиль  
+            li(class="nav-item dropdown")
+              a(class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false") Каталог 
+              ul(class="dropdown-menu")
+                li
+                  a(class="dropdown-item" href="/v1/api/adminCatalog/users") Пользователи 
+                li
+                  a(class="dropdown-item" href="/v1/api/adminCatalog/janrs") Жанры
+                li
+                  a(class="dropdown-item" href="/v1/api/adminCatalog/roles") Роли пользователей 
+                li
+                  a(class="dropdown-item" href="/v1/api/adminCatalog/rights") Доступные системные права  
+          form(class="d-flex" role="search" action="")
+            input(class="form-control me-2" type="search" placeholder="Поиск" aria-label="Поиск") 
+            button(class="btn btn-outline-success" type="submit") Найти
+    br
+    div(class="container text-center")
+      div(class="row align-items-start")
+        div(class="col-2 col-sm-1")
+          p Данные 
+        div(class="col-8 col-sm-10")
+          block pageRights 
+          block pageRoles  
+          block pageRolesInfo
+          block pageUsers
+          block pageUsersInfo 
+        div(class="col-2 col-sm-1")
+          p Данные 2
     //- script(src="/scripts/script.js") 
     script(src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous")
     script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous")
