Правки для роутов

--- a/views/adminPage.pug
+++ b/views/adminPage.pug
@@ -40,6 +40,8 @@ html
           block pageRolesInfo
           block pageUsers
           block pageUsersInfo 
+          block pageJanrs
+          block pageJanrInfo
         div(class="col-2 col-sm-1")
           p Данные 2
     //- script(src="/scripts/script.js") 
