--- a/views/adminPage.pug
+++ b/views/adminPage.pug
@@ -12,9 +12,11 @@ html
         div(class="collapse navbar-collapse" id="navbarSupportedContent")
           ul(class="navbar-nav me-auto mb-2 ")
             li(class="nav-item")
-              a(class="nav-link active" aria-current="page" href="/v1/api/main") Главная
+              a(class="nav-link active" aria-current="page" href="/v1/api/adminCatalog") Главная (Администрация)
             li(class="nav-item")
-              a(class="nav-link" aria-current="page" href="/v1/api/myProfile") Мой профиль  
+              a(class="nav-link" aria-current="page" href="/v1/api/adminCatalog/myProfile") Мой профиль 
+            li(class="nav-item")
+              a(class="nav-link" aria-current="page" href="/v1/api/adminCatalog/myPlaylists") Мои плэйлисты  
             li(class="nav-item dropdown")
               a(class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false") Каталог 
               ul(class="dropdown-menu")
@@ -22,6 +24,10 @@ html
                   a(class="dropdown-item" href="/v1/api/adminCatalog/users") Пользователи 
                 li
                   a(class="dropdown-item" href="/v1/api/adminCatalog/janrs") Жанры
+                li
+                  a(class="dropdown-item" href="/v1/api/adminCatalog/playlists") Плейлисты пользователей
+                li
+                  a(class="dropdown-item" href="/v1/api/adminCatalog/compositions") Композиции
                 li
                   a(class="dropdown-item" href="/v1/api/adminCatalog/roles") Роли пользователей 
                 li
