--- a/views/main.pug
+++ b/views/main.pug
@@ -5,11 +5,45 @@ html
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous")
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/stylesheets/styleMainPage.css')
   body
-    block listMusic 
-    block detailMusic 
-    //- script(src="/scripts/script.js") 
+    nav(class="navbar navbar-expand bg-body-tertiary")
+      div(class="container-fluid justify-content-center")
+        div(class="collapse navbar-collapse" id="navbarSupportedContent")
+          ul(class="navbar-nav me-auto mb-2 ")
+            li(class="nav-item")
+              a(class="nav-link active" aria-current="page" href="/v1/api/main") Главная
+            li(class="nav-item")
+              a(class="nav-link" aria-current="page" href="/v1/api/main/myProfile") Мой профиль 
+            li(class="nav-item")
+              a(class="nav-link" aria-current="page" href="/v1/api/main/myPlaylists") Мои плэйлисты  
+            li(class="nav-item")
+              a(class="nav-link" aria-current="page" href="/v1/api/main/users") Другие пользователи
+            li(class="nav-item")
+              a(class="nav-link" aria-current="page" href="/v1/api/main/janrs") Жанры 
+            li(class="nav-item")
+              a(class="nav-link" aria-current="page" href="/v1/api/main/music") Композиции 
+          form(class="d-flex" role="search" action="")
+            input(class="form-control me-2" type="search" placeholder="Поиск" aria-label="Поиск") 
+            button(class="btn btn-outline-success" type="submit") Найти
+    br
+    div(class="container text-center")
+      div(class="row align-items-start")
+        div(class="col-2 col-sm-1")
+          p Данные 
+        div(class="col-8 col-sm-10")
+          block listMusic 
+          block detailMusic 
+          block main_myPlaylists
+          block main_myProfile
+          block main_myPlaylistDetail
+          block main_listJanrs
+          block main_InfoJanr
+          block main_pageUsers
+          block main_pageUserInfo
+          block main_infoUsersPlaylistById
+        div(class="col-2 col-sm-1")
+          p Data 2
     script(src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous")
     script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous")
     script(src="/javascripts/addmusicScript.js") 
